fix align facultad membrete

--- a/public_html/perseo/facultad/css/_dcmtheme.css
+++ b/public_html/perseo/facultad/css/_dcmtheme.css
@@ -975,10 +975,12 @@ html, body, #wrapperscroll, #porletwrap, .metro .mm-page {
         margin: auto;
         width: auto;
         margin-bottom: 20px;
+        margin-left: 20px;
     }
 
     #slide1 .membrete h3, #slide1 .membrete h2 {
         font-weight: normal;
+        padding: 10px;
     }
 
 .topBanner .banx, .topBanner .banx img {
@@ -1012,7 +1014,7 @@ html, body, #wrapperscroll, #porletwrap, .metro .mm-page {
     margin-left: 540px;
 }
 
-    #slide1 .detail h2,#slide1 .detail h1,#slide1 .detail h4 .og-expander-inner h2, .postgrados h2.h2, h2.h2, h3.h3, h4.h4, .metro .panel .panel-header {
+    #slide1 .detail h2, #slide1 .detail h1, #slide1 .detail h4 .og-expander-inner h2, .postgrados h2.h2, h2.h2, h3.h3, h4.h4, .metro .panel .panel-header {
         color: #4275b9;
         font-family: "Adequate ExtraLight",'Open Sans Light', Verdana, Arial, Helvetica, sans-serif;
         -webkit-font-smoothing: antialiased;
